# bgboxmaker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bgboxmaker/: __init__.py  __main__.py  dim.py  main.py  reference.md
src/bgboxmaker/model/: __init__.py  background_config.py  basic_config.py  box_config.py  common_config.py  config.py  configuration_error.py  dimension_config.py  enums.py  feature_config.py  font_config.py  option_factory.py  options_config.py  options_image_config.py  options_panel_config.py  options_text_config.py  page_config.py  section_config.py
src/bgboxmaker/view/: __init__.py  background_renderer.py  box.py  feature_grid.py  section.py
src/bgboxmaker/view/feature/: __init__.py  feature.py  image_feature.py  panel_feature.py  text_feature.py
tests/: conftest.py
tests/model/: test_background_config.py  test_basic_config.py  test_box_config.py  test_common_config.py  test_config.py  test_dimension_config.py  test_feature_config.py  test_font_config.py  test_options_image_config.py  test_options_panel_config.py  test_options_text_config.py  test_page_config.py  test_section_config.py
tests/view/: test_background_renderer.py  test_box.py  test_feature_grid.py  test_section.py
tests/view/feature/: test_image_feature.py  test_panel_feature.py  test_text_feature.py
